[vr] Account for tilt in head pose change calculation

With this change, the utility functions for dealing with head poses
are moved into a platform independent directory, tests have been added,
and head tilt detection has been incorporated into the function that
determines similarity between head poses.

Bug: 782449
Change-Id: I10f7af1958ae0eb2a1de13f238371425fc4ed939
Reviewed-on: https://chromium-review.googlesource.com/757590
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Commit-Queue: Ian Vollick <vollick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514846}
Former-commit-id: 31ebe1ffcfe3b6c99e07e0aecad68c3db64cd2a4